@@ -35,6 +35,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha5...master[Check the HEAD d
 
 *Filebeat*
 - Set close_inactive default to 5 minutes (was 1 hour before)
+- Set clean_removed and close_removed to true by default
 
 *Winlogbeat*
 
